<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/activityorbitsong_img_logo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_orbisong"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/margin_supergrande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityorbitsong_et_frace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refran_orbitsong"
        android:paddingEnd="@dimen/padding_grande"
        android:paddingStart="@dimen/padding_grande"
        android:textColor="@color/white"
        style="@style/Titulo_Principal"
        android:layout_marginTop="@dimen/margin_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityorbitsong_img_logo" />

    <Button
        android:id="@+id/activityorbitsong_btn_iniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclickInicioSesion"
        android:layout_marginTop="@dimen/margin_supergrande"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        android:backgroundTint="@color/Orange"
        android:text="@string/activity_btn_iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityorbitsong_et_frace"
        />

    <Button
        android:id="@+id/activityorbitsong_btn_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onclickRegistrarse"
        android:layout_marginTop="@dimen/margin_medio"
        android:layout_marginStart="@dimen/margin_grande"
        android:layout_marginEnd="@dimen/margin_grande"
        app:backgroundTint="@null"
        android:background="@drawable/btn_borde"
        android:text="@string/activity_btn_registrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityorbitsong_btn_iniciarsesion"
        />



</androidx.constraintlayout.widget.ConstraintLayout>